# citybike-parser

./: Cargo.toml  LICENSE  README.md
src/: main.rs  structs.rs
