[package]
name = "citybike-parser"
version = "0.1.0"
authors = ["Stian Soltvedt <stian@soltvedt.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
chrono = "0.4.10"
pbr  = "1.0.2"
color-backtrace = { version = "0.3.0", features = ["failure-bt"] }
failure = { version = "0.1.6", features = ["backtrace"] }
